--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 TRIP. All rights reserved.</p>
-    <p><a href="#">개인정보처리방침</a> | <a href="#">이용약관</a></p>
+    <p>&copy; 2025 TRIP. All rights reserved.</p> <a href="privacy.html" class="footer-btn">개인정보처리방침</a>
+  <a href="terms.html" class="footer-btn">이용약관</a>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
