--- a/privacy.html
+++ b/privacy.html
@@ -52,6 +52,8 @@
 <body>
 
   <main>
+    <a href="index.html" class="homebtn">뒤로가기</a>
+
     <h1>개인정보처리방침</h1>
     <p><strong>최종 수정일:</strong> 2025년 7월 16일</p>
 
