--- a/terms.html
+++ b/terms.html
@@ -40,6 +40,7 @@
 <body>
 
   <main>
+    <a href="index.html" class="homebtn">뒤로가기</a>
     <h1>이용약관</h1>
     <p><strong>최종 수정일:</strong> 2025년 7월 16일</p>
 
