--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
 <body>
   <header>
     <div class="container">
-    <div class="logo">TRIP</div>
+    <div class="logo"><a href="index.html"> TRIP</a></div>
     <nav>
       <ul>
-        <li><a href="#">홈</a></li>
-        <li><a href="#">여행지</a></li>
-        <li><a href="#">후기</a></li>
-        <li><a href="#">프로모션</a></li>
-        <li><a href="#">문의</a></li>
+        <li><a href="travel.html">여행지</a></li>
+        <li><a href="review.html">후기</a></li>
+        <li><a href="promotion.html">프로모션</a></li>
+        <li><a href="info.html">문의</a></li>
       </ul>
     </nav>
     <div class="menu-toggle">&#9776;</div>
@@ -45,7 +44,7 @@
     <div class="overlay">
       <h1>당신의 특별한 여행을 TRIP과 함께</h1>
       <p>전 세계 어디든, 원하는 여행을 찾아보세요!</p>
-      <a href="#" class="btn">지금 떠나기</a>
+      <a href="travel.html" class="btn">지금 떠나기</a>
     </div>
     </div>
   </section>
@@ -53,10 +52,10 @@
   <input type="search" placeholder="어디로 떠나고 싶나요?" class="search-bar">
   <div class="swiper discover-swiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="images/card1.jpg" alt=""><span>바다 휴양지</span></div>
-      <div class="swiper-slide"><img src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqiaqBvgdFJQjJRT4ktRzvIaUkn5mMTrBaTEJKyWyBnJf9l2PZ1boCjsP1qt2ksr8OYq-XWTrU6O_PwB7jDrecUFhijcrR1xXQuwWOklMS3XCgiGghGpLv5kcHaSPV4JkUVL6f7gJlP1Wg=s680-w680-h510-rw" alt=""><span>오래된 유적지</span></div>
-       <div class="swiper-slide"><img src="images/card2.jpg" alt=""><span>힐링감성패키지</span></div>
-        <div class="swiper-slide"><img src="images/card2.jpg" alt=""><span>남녀노소 행복패키지</span></div>
+      <div class="swiper-slide"><img src="https://a.travel-assets.com/findyours-php/viewfinder/images/res70/180000/180678-Maldives-All.jpg" alt="몰디브"><span>아름다운 신혼 여행지</span></div>
+      <div class="swiper-slide"><img src="https://mediaim.expedia.com/destination/1/dd4cbb71965951b52ff9d73f2a79af33.jpg" alt="앙코르와트"><span>오래된 유적지 앙코르와트</span></div>
+       <div class="swiper-slide"><img src="https://a.travel-assets.com/findyours-php/viewfinder/images/res70/69000/69346-Tokyo.jpg" alt="일본도쿄"><span>비행시간단축패키지 일본도쿄</span></div>
+        <div class="swiper-slide"><img src="https://cdn.vietnamkoreatimes.com/news/photo/202310/697_965_2047.jpg" alt="푸꾸옥"><span>베트남 푸꾸옥, 가성비 섬 관광지 </span></div>
       ...
     </div>
     <div class="swiper-pagination"></div>
@@ -82,6 +81,21 @@
         <h3>뉴욕</h3>
         <p>잠들지 않는 도시의 활기와 매력</p>
       </div>
+        <div class="card">
+        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0e/9d/74/9f/photo0jpg.jpg?w=700&h=400&s=1" alt="뉴욕">
+        <h3>뉴욕</h3>
+        <p>잠들지 않는 도시의 활기와 매력</p>
+      </div>
+        <div class="card">
+        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0e/9d/74/9f/photo0jpg.jpg?w=700&h=400&s=1" alt="뉴욕">
+        <h3>뉴욕</h3>
+        <p>잠들지 않는 도시의 활기와 매력</p>
+      </div>
+        <div class="card">
+        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0e/9d/74/9f/photo0jpg.jpg?w=700&h=400&s=1" alt="뉴욕">
+        <h3>뉴욕</h3>
+        <p>잠들지 않는 도시의 활기와 매력</p>
+      </div>
     </div>
   </section>
 
@@ -98,5 +112,8 @@ TRIP LLC는 예약 대행사 또는 투어 운영자가 아닙니다. 트립 파
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
+  <body oncontextmenu="return false">
+    <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
+
 </body>
 </html>
