--- a/index.html
+++ b/index.html
@@ -48,8 +48,17 @@
     </div>
     </div>
   </section>
-  <section class="discover">
-  <input type="search" placeholder="어디로 떠나고 싶나요?" class="search-bar">
+<!-----------검색색션---->
+  <section class="search-section">
+    <form action="https://www.google.com/search" method="GET" target="_blank" class="search-form">
+      <input type="search" name="q" placeholder="어디로 떠나고 싶나요?" class="search-bar" />
+      <button type="submit" class="search-btn">검색</button>
+    </form>
+  </section>
+<!-- 검색섹션끝-->
+
+
+ <!-- 이거슨2번째슬라이드-->
   <div class="swiper discover-swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="https://a.travel-assets.com/findyours-php/viewfinder/images/res70/180000/180678-Maldives-All.jpg" alt="몰디브"><span>아름다운 신혼 여행지</span></div>
@@ -99,10 +108,15 @@
     </div>
   </section>
 
-  <footer>
+ <footer>
     <div class="container">
      <a href="privacy.html" class="footer-btn">개인정보처리방침</a><a href="terms.html" class="footer-btn">이용약관</a>
-  <p>&copy; 2025 TRIP. All rights reserved.</p>
+      <p><strong>대표이사</strong> 김지훈 &nbsp; | &nbsp; <strong>주소</strong> 대한민국 서울 강남구 서초동 1320-5, HJ타워 10층</p>
+  <p><strong>고객센터</strong> 1588-2025 (평일 10:00 - 18:00 / 주말 및 공휴일 휴무)</p>
+  <p><strong>사업자등록번호</strong> 302-55-89201 &nbsp; | &nbsp; <strong>통신판매업신고</strong> 제 2023-서울강남-1120호</p>
+  <p><strong>개인정보관리책임자</strong> 최유정</p>
+  <p>© TRIP. All rights reserved.</p>
+
   <p>
    TRIP LLC는 당사 사이트 및 앱에서 광고된 가격으로 이용할 수 있음을 보장하지 않습니다. 표시 가격으로 이용 시 특정 기간 투숙해야 하거나 사용 제한일, 자격 또는 기타 적용되는 제한 사항이 있을 수 있습니다. TRIP LLC는 트립이 소유하거나 운영하지 않는 외부 웹사이트의 콘텐츠에 대해 책임지지 않습니다.
 
@@ -112,8 +126,7 @@ TRIP LLC는 예약 대행사 또는 투어 운영자가 아닙니다. 트립 파
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
-  <body oncontextmenu="return false">
     <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
-
+  <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false"></body>
 </body>
 </html>
