--- a/promotion.html
+++ b/promotion.html
@@ -14,6 +14,105 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    프로모션페이지 설정중
+  <header>
+    <div class="container">
+    <div class="logo"><a href="index.html"> TRIP</a></div>
+    <nav>
+      <ul>
+        <li><a href="travel.html">여행지</a></li>
+        <li><a href="review.html">후기</a></li>
+        <li><a href="promotion.html">프로모션</a></li>
+        <li><a href="info.html">문의</a></li>
+      </ul>
+    </nav>
+    <div class="menu-toggle">&#9776;</div>
+    </div>
+  </header>
+<section class="promo-section">
+  <h2>프로모션 & 이벤트</h2>
+  <div class="promo-grid">
+    <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?beach,travel" alt="이벤트1">
+      <h3>여름엔 역시 바다로!</h3>
+      <p>뜨거운 여름, 최대 30% 할인</p>
+    </div>
+    <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?hotel,room" alt="이벤트2">
+      <h3>럭셔리 호텔 특가</h3>
+      <p>한정 기간 단독 특가 세일!</p>
+    </div>
+    <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?airplane,cloud" alt="이벤트3">
+      <h3>항공권 반값 찬스</h3>
+      <p>지금 예약하고 더 싸게 떠나자!</p>
+    </div>
+    
+    <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?city,tour" alt="이벤트4">
+      <h3>도시 여행 패키지</h3>
+      <p>가성비 갑, 감성 도심 여행!</p>
+    </div>
+    <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?mountain,camp" alt="이벤트5">
+      <h3>힐링 자연 속으로</h3>
+      <p>숲에서 만나는 쉼, 최대 40% OFF</p>
+    </div>
+    <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?spa,resort" alt="이벤트6">
+      <h3>스파 & 리조트 휴양</h3>
+      <p>당신을 위한 완벽한 휴식</p>
+    </div>
+      <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?city,tour" alt="이벤트4">
+      <h3>도시 여행 패키지</h3>
+      <p>가성비 갑, 감성 도심 여행!</p>
+      </div>
+    <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?city,tour" alt="이벤트4">
+      <h3>도시 여행 패키지</h3>
+      <p>가성비 갑, 감성 도심 여행!</p>
+    </div>
+      <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?city,tour" alt="이벤트4">
+      <h3>도시 여행 패키지</h3>
+      <p>가성비 갑, 감성 도심 여행!</p>
+    </div>
+      <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?city,tour" alt="이벤트4">
+      <h3>도시 여행 패키지</h3>
+      <p>가성비 갑, 감성 도심 여행!</p>
+    </div>
+      <div class="promo-card">
+      <img src="https://source.unsplash.com/400x240/?city,tour" alt="이벤트4">
+      <h3>도시 여행 패키지</h3>
+      <p>가성비 갑, 감성 도심 여행!</p>
+      
+
+    </div>
+    </div>
+  
+</section>
+
+
+
+
+
+
+
+ <footer>
+    <div class="container">
+     <a href="privacy.html" class="footer-btn">개인정보처리방침</a><a href="terms.html" class="footer-btn">이용약관</a>
+      <p><strong>대표이사</strong> 김지훈 &nbsp; | &nbsp; <strong>주소</strong> 대한민국 서울 강남구 서초동 1320-5, HJ타워 10층</p>
+  <p><strong>고객센터</strong> 1588-2025 (평일 10:00 - 18:00 / 주말 및 공휴일 휴무)</p>
+  <p><strong>사업자등록번호</strong> 302-55-89201 &nbsp; | &nbsp; <strong>통신판매업신고</strong> 제 2023-서울강남-1120호</p>
+  <p><strong>개인정보관리책임자</strong> 최유정</p>
+  <p>© TRIP. All rights reserved.</p>
+  <p>
+   TRIP LLC는 당사 사이트 및 앱에서 광고된 가격으로 이용할 수 있음을 보장하지 않습니다. 표시 가격으로 이용 시 특정 기간 투숙해야 하거나 사용 제한일, 자격 또는 기타 적용되는 제한 사항이 있을 수 있습니다. TRIP LLC는 트립이 소유하거나 운영하지 않는 외부 웹사이트의 콘텐츠에 대해 책임지지 않습니다.
+
+TRIP LLC는 예약 대행사 또는 투어 운영자가 아닙니다. 트립 파트너 사이트 중 한 곳에서 예약할 경우 모든 요금이 해당 사이트에 명시되어 있는지 반드시 확인하세요.
+  </p></div>
+  </footer>
+    <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false"></body>
 </body>
 </html>
