--- a/terms.html
+++ b/terms.html
@@ -94,6 +94,6 @@
     <h2>제10조 (고지의 의무)</h2>
     <p>이 약관은 2025년 7월 16일부터 적용되며, 변경사항 발생 시 웹사이트에 사전 고지합니다.</p>
   </main>
-
+  <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false"></body>
 </body>
 </html>
