--- a/privacy.html
+++ b/privacy.html
@@ -117,5 +117,22 @@
     <p>방침이 변경될 경우 웹사이트 공지사항을 통해 고지합니다.</p>
   </main>
 
+
+
+   <footer>
+    <div class="container">
+     <a href="privacy.html" class="footer-btn">개인정보처리방침</a><a href="terms.html" class="footer-btn">이용약관</a>
+      <p><strong>대표이사</strong> 김지훈 &nbsp; | &nbsp; <strong>주소</strong> 대한민국 서울 강남구 서초동 1320-5, HJ타워 10층</p>
+  <p><strong>고객센터</strong> 1588-2025 (평일 10:00 - 18:00 / 주말 및 공휴일 휴무)</p>
+  <p><strong>사업자등록번호</strong> 302-55-89201 &nbsp; | &nbsp; <strong>통신판매업신고</strong> 제 2023-서울강남-1120호</p>
+  <p><strong>개인정보관리책임자</strong> 최유정</p>
+  <p>© TRIP. All rights reserved.</p>
+  <p>
+   TRIP LLC는 당사 사이트 및 앱에서 광고된 가격으로 이용할 수 있음을 보장하지 않습니다. 표시 가격으로 이용 시 특정 기간 투숙해야 하거나 사용 제한일, 자격 또는 기타 적용되는 제한 사항이 있을 수 있습니다. TRIP LLC는 트립이 소유하거나 운영하지 않는 외부 웹사이트의 콘텐츠에 대해 책임지지 않습니다.
+
+TRIP LLC는 예약 대행사 또는 투어 운영자가 아닙니다. 트립 파트너 사이트 중 한 곳에서 예약할 경우 모든 요금이 해당 사이트에 명시되어 있는지 반드시 확인하세요.
+  </p></div>
+  </footer>
+    <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false"></body>
 </body>
 </html>
