--- a/common/header.html
+++ b/common/header.html
@@ -14,17 +14,17 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-   <header>
-    <div class="container">
-    <div class="logo"><a href="../index.html"> TRIP</a></div>
-    <nav>
-      <ul>
-        <li><a href="../travel/index.html">여행지</a></li>
-        <li><a href="../review/index.html">후기</a></li>
-        <li><a href="/promotion/index.html">프로모션</a></li>
-        <li><a href="../info/index.html">문의</a></li>
-      </ul>
-    </nav>
-    <div class="menu-toggle">&#9776;</div>
-    </div>
-  </header>
+   <div class="container">
+  <div class="logo">
+    <a href="./index.html">TRIP</a>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="./travel/index.html">여행지</a></li>
+      <li><a href="./review/index.html">후기</a></li>
+      <li><a href="./promotion/index.html">프로모션</a></li>
+      <li><a href="./info/index.html">문의</a></li>
+    </ul>
+  </nav>
+  <div class="menu-toggle">&#9776;</div>
+</div>
