--- a/common/header.html
+++ b/common/header.html
@@ -16,7 +16,7 @@
 <body>
    <div class="container">
   <div class="logo">
-    <a href="./index.html">TRIP</a>
+    <a href="event/index.html">TRIP</a>
   </div>
   <nav>
     <ul>
