--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="logo"><a href="/index.html"> TRIP</a></div>
     <nav>
       <ul>
-        <li><a href="event/travel/index.html">여행지</a></li>
-        <li><a href="event/review/index.html">후기</a></li>
-        <li><a href="event/promotion/index.html">프로모션</a></li>
-        <li><a href="event/info/index.html">문의</a></li>
+        <li><a href="/travel/index.html">여행지</a></li>
+        <li><a href="/review/index.html">후기</a></li>
+        <li><a href="/promotion/index.html">프로모션</a></li>
+        <li><a href="/info/index.html">문의</a></li>
       </ul>
     </nav>
     <div class="menu-toggle">&#9776;</div>
